# Logerr

./: .gitignore  CHANGELOG.md  LICENSE  README.MD  flake.nix  logerr.cabal
src/Logerr/: Group.hs  Plugin.hs  Plugin_exp.hs  Plugin_experiment.hs  Types.hs
test/: Main.hs  Test1.hs
