cabal-version:      3.0
name:               logerr
version:            0.1.0.0
synopsis:           A plugin to throw error when a stringified object is being passed in text error
license:            MIT
license-file:       LICENSE
author:             piyushgarg-juspay
maintainer:         piyushgarg1906@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-options
  build-depends:       base ^>=4.14.3.0
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TypeApplications

library
    import:              common-options
    exposed-modules:  Logerr.Plugin
    other-modules: 
        Logerr.Types
        Logerr.Group
    build-depends:
                bytestring
                , containers
                , filepath
                , ghc ^>= 8.10.7
                , ghc-exactprint
                , unordered-containers
                , uniplate >= 1.6  && < 1.7
                , references
                , classyplate
                , aeson
                , directory
                , extra
                , aeson-pretty
    hs-source-dirs:   src
    default-language: Haskell2010

executable logerr
    import:           common-options
    main-is:          Main.hs
    build-depends:
        , aeson
        , directory
        , bytestring
        , filepath
        , containers
        , extra
        , aeson-pretty
        , logerr
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite logerr-test
    import:           common-options

    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    hs-source-dirs:   test

    main-is:          Main.hs
    other-modules:
        Test1

    build-depends:
        , logerr
        , aeson
        , text
        , containers
        , bytestring
        , aeson-pretty
        , extra
    ghc-options: -fplugin=Logerr.Plugin -dumpdir=test/dumps -ddump-to-file  -ddump-parsed-ast  -ddump-tc-ast
